2006-01-09  Ankit Jain  <jankit@novell.com>

	* TypeDef.cs (TypeDef.Define): Set is_defined to true as soon as the
	Peapi type gets created.

2006-01-09  Ankit Jain  <jankit@novell.com>

	* GenericTypeRef.cs: Rename to ..
	* GenericParamRef.cs: .. this.
	(IGenericTypeRef): New.
	(GenericParamRef): Implement IGenericTypeRef.
	* GenericTypeInst.cs (GenericTypeInst): Implement IGenericTypeRef instead
	of IClassRef.
	(GenericTypeInst.ResolveOnly): Rename to ResolveNoTypeSpec to implement
	IGenericTypeRef.ResolveNoTypeSpec .
	* MethodDef.cs (MethodDef.ResolveGenParams): Update to use GenericParamRef.
	* Local.cs (Local.GetPeapiLocal): Use IGenericTypeRef.

2006-01-08  Ankit Jain  <jankit@novell.com>

	* InstrTable.cs (inst_table): Add stelem.any, ldelem.any and
	constrained. instructions.

2006-01-07  Ankit Jain  <jankit@novell.com>

	* GenericParameters.cs (GenericParameter): New.
	(GenericParameters): Collection of Generic parameters.
	* TypeDef.cs:
	* CodeGen.cs:
	* MethodDef.cs: Update to use the new GenericParameters class.

2006-01-06  Ankit Jain  <jankit@novell.com>

	GenericTypeInst.Resolve should do the expected thing ie., resolve and add
	the Generic Inst to the typespec table. Use ResolveOnly to Resolve w/o 
	adding to the table.
	* GenericTypeInst.cs (GenericTypeInst.Resolve): Rename to ..
	(GenericTypeInst.ResolveOnly): .. this.
	(GenericTypeInst.ResolveAsClass): Rename to Resolve.

	* TypeDef.cs (TypeDef.Define): Revert the ResolveAsClass calls added here.
	* Local.cs (Local.GetPeapiLocal): Use new GenericTypeInst.ResolveOnly if type is
	GenericTypeInst.

2006-01-06  Ankit Jain  <jankit@novell.com>

	* IClassRef.cs (IClassRef.Clone): New.
	(IClassRef.GetGenericTypeInst): Get the Generic Instance of the IClassRef.
	(IClassRef.ResolveInstance): Resolves the generic instance and returns the
	resolved PEAPI type.     

	* TypeRef.cs:
	* ExternTypeRef.cs: Implement new methods of IClassRef.