@@ -1,5 +1,10 @@
 2006-01-09  Ankit Jain  <jankit@novell.com>
 
+	* GenericArguments.cs (GenericArguments.is_resolved): New.
+	(GenericArguments.p_type_list): New. Resolve only once and return this.
+
+2006-01-09  Ankit Jain  <jankit@novell.com>
+
 	* TypeDef.cs (TypeDef.Define): Set is_defined to true as soon as the
 	Peapi type gets created.
 
